Porcédure d'importation du fichier Ok. Reste à vérifier que le nom soit celui demander.

--- a/css/style.css
+++ b/css/style.css
@@ -185,8 +185,14 @@ dl:hover a{
 }
 /*****************************************************/
 
-/*****************Consultation Excel*****************/
+/*****************Upload Excel*****************/
+#upload_message{
+	display:block;
+	background-color:#e1dee4;
+	height:20px;
 
+	text-align:center;
+}
 /*****************************************************/
 
 /*****************Footer*****************/
