--- a/css/style.css
+++ b/css/style.css
@@ -204,16 +204,19 @@ dl:hover a{
 
 /*****************Footer*****************/
 
-.footer {
-  position: relative;
+#footer {
+	height:30px;
+  position: absolute;
   right: 0;
   bottom: 0;
   left: 0;
-  padding: 1rem;
-  background-color: #efefef;
+  padding: 2rem;
+  background-color: #bdc3c7;
   text-align: center;
 }
-
+#footer p{
+	line-height:10px;
+}
 /*****************************************************/
 
 
@@ -228,18 +231,40 @@ padding: 40px;
 
 /*****************************************************/
 
-
+/*****************Message MAJ Excel*****************/
 #maj_success{
 	display:none;
+	text-align:center;
 }
 #maj_fail{
 	display:none;
+	text-align:center;
+}
+/*****************************************************/
+
+
+
+
+/*****************Loader*****************/
+#display{
+	display: none;
+}
+.loader{
+	
+	border: 16px solid #ecf0f1;
+	border-top: 16px solid #2ecc71;
+	border-radius: 30%;
+	width: 120px;
+	height: 120px;
+	animation: spin 2s linear infinite;
 }
 
-
-
-
-
+@keyframes spin{
+	display:none;
+	  0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+/*****************************************************/
 
 
 
