--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,7 @@ dl:hover a{
 #upload_message{
 	display:block;
 	background-color:#e1dee4;
-	height:60px;
+	height:90px;
 	text-align:center;
 	text
 }
@@ -199,7 +199,9 @@ dl:hover a{
 	margin-top:18px;
 	
 }
-
+#upload_upload{
+	display:none;
+}
 /*****************************************************/
 
 /*****************Footer*****************/
@@ -218,6 +220,7 @@ dl:hover a{
 #footer p{
 	line-height:10px;
 }
+
 /*****************************************************/
 
 
@@ -253,7 +256,7 @@ th {
 	position: relative;
 	text-shadow: 0 1px 0 #000;	
 }
-
+/*
 th:after {
 	background: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,.08));
 	content: '';
@@ -265,7 +268,7 @@ th:after {
 	top: 25%;
 	width: 100%;
 }
-
+*/
 th:first-child {
 	border-left: 1px solid #777;	
 	box-shadow: inset 1px 1px 0 #999;
@@ -304,6 +307,7 @@ tr:nth-child(odd) td {
 
 tr:last-of-type td {
 	box-shadow: inset 0 -1px 0 #fff; 
+	
 }
 
 tr:last-of-type td:first-child {
@@ -315,7 +319,8 @@ tr:last-of-type td:last-child {
 }	
 
 tbody:hover td {
-	color: transparent;
+	/*
+	color: transparent;*/
 	text-shadow: 0 0 3px #aaa;
 }
 
