--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,6 @@
 
 /******************Script Connexion********************/
 
-
-
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
 #space{
@@ -107,7 +105,15 @@
 	 font-size: 20px;
 
 }
-/******************Script Connexion********************/
+/******************************************************/
+
+
+
+
+
+
+
+
 
 
 /*****************Couleur Lien Connexion**************/
@@ -115,6 +121,16 @@
 color:white;
 }
 /*****************************************************/
+
+
+
+
+
+
+
+
+
+
 
 /*****************Menu*****************/
 #menu{
@@ -185,6 +201,16 @@ dl:hover a{
 }
 /*****************************************************/
 
+
+
+
+
+
+
+
+
+
+
 /*****************Upload Excel*****************/
 #upload_message{
 	display:block;
@@ -203,6 +229,15 @@ dl:hover a{
 	display:none;
 }
 /*****************************************************/
+
+
+
+
+
+
+
+
+
 
 /*****************Footer*****************/
 
@@ -226,7 +261,15 @@ dl:hover a{
 
 
 
+
+
+
+
+
+
+
 /*****************Tableau PHP pour fichier Excel*****************/
+/*
 #tab th{
 	text-align:center;
 	height:40px;
@@ -241,6 +284,7 @@ table {
 	margin: 30px auto;
 	text-align: left;
 	width: 800px;
+	margin-right:80px;
 }	
 
 th {
@@ -256,19 +300,7 @@ th {
 	position: relative;
 	text-shadow: 0 1px 0 #000;	
 }
-/*
-th:after {
-	background: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,.08));
-	content: '';
-	display: block;
-	height: 25%;
-	left: 0;
-	margin: 1px 0 0 0;
-	position: absolute;
-	top: 25%;
-	width: 100%;
-}
-*/
+
 th:first-child {
 	border-left: 1px solid #777;	
 	box-shadow: inset 1px 1px 0 #999;
@@ -319,8 +351,7 @@ tr:last-of-type td:last-child {
 }	
 
 tbody:hover td {
-	/*
-	color: transparent;*/
+	
 	text-shadow: 0 0 3px #aaa;
 }
 
@@ -328,8 +359,103 @@ tbody:hover tr:hover td {
 	color: #444;
 	text-shadow: 0 1px 0 #fff;
 }
+*/
 
+
+
+
+
+table {
+    border-collapse: collapse;
+    margin-bottom: 3em;
+    width: 100%;
+    background: #fff;
+}
+td, th {
+    padding: 0.75em 1.5em;
+    text-align: left;
+}
+	td.err {
+		background-color: #e992b9;
+		color: #fff;
+		font-size: 0.75em;
+		text-align: center;
+		line-height: 1;
+	}
+th {
+    background-color: #31bc86;
+    font-weight: bold;
+    color: #fff;
+    white-space: nowrap;
+}
+tbody th {
+	background-color: #2ea879;
+}
+tbody tr:nth-child(2n-1) {
+    background-color: #f5f5f5;
+    transition: all .125s ease-in-out;
+}
+tbody tr:hover {
+    background-color: rgba(129,208,177,.3);
+}
+
+/* For appearance */
+.sticky-wrap {
+	overflow-x: auto;
+	overflow-y: hidden;
+	position: relative;
+	margin: 3em 0;
+	width: 100%;
+}
+.sticky-wrap .sticky-thead,
+.sticky-wrap .sticky-col,
+.sticky-wrap .sticky-intersect {
+	opacity: 0;
+	position: absolute;
+	top: 0;
+	left: 0;
+	transition: all .125s ease-in-out;
+	z-index: 50;
+	width: auto; /* Prevent table from stretching to full size */
+}
+	.sticky-wrap .sticky-thead {
+		box-shadow: 0 0.25em 0.1em -0.1em rgba(0,0,0,.125);
+		z-index: 100;
+		width: 100%; /* Force stretch */
+	}
+	.sticky-wrap .sticky-intersect {
+		opacity: 1;
+		z-index: 150;
+
+	}
+		.sticky-wrap .sticky-intersect th {
+			background-color: #666;
+			color: #eee;
+		}
+.sticky-wrap td,
+.sticky-wrap th {
+	box-sizing: border-box;
+}
+
+/* Not needed for sticky header/column functionality */
+td.user-name {
+	text-transform: capitalize;
+}
+.sticky-wrap.overflow-y {
+	overflow-y: auto;
+	max-height: 50vh;
+}
 /*****************************************************/
+
+
+
+
+
+
+
+
+
+
 
 /*****************Message MAJ Excel*****************/
 #maj_success{
@@ -367,7 +493,11 @@ tbody:hover tr:hover td {
 /*****************************************************/
 
 
-
+#non_Exist{
+	display: none;
+	background-color: #ecf0f1;
+	
+}
 
 
 
