--- a/css/style.css
+++ b/css/style.css
@@ -217,7 +217,7 @@ dl:hover a{
 	background-color:#e1dee4;
 	height:90px;
 	text-align:center;
-	text
+
 }
 #upload_message p{
  font-family: "Arial Black", Times, serif;
@@ -269,97 +269,7 @@ dl:hover a{
 
 
 /*****************Tableau PHP pour fichier Excel*****************/
-/*
-#tab th{
-	text-align:center;
-	height:40px;
-padding: 40px;
-}
-table {
-	background: #f5f5f5;
-	border-collapse: separate;
-	box-shadow: inset 0 1px 0 #fff;
-	font-size: 12px;
-	line-height: 24px;
-	margin: 30px auto;
-	text-align: left;
-	width: 800px;
-	margin-right:80px;
-}	
 
-th {
-	background: url(http://jackrugile.com/images/misc/noise-diagonal.png), linear-gradient(#777, #444);
-	border-left: 1px solid #555;
-	border-right: 1px solid #777;
-	border-top: 1px solid #555;
-	border-bottom: 1px solid #333;
-	box-shadow: inset 0 1px 0 #999;
-	color: #fff;
-  font-weight: bold;
-	padding: 10px 15px;
-	position: relative;
-	text-shadow: 0 1px 0 #000;	
-}
-
-th:first-child {
-	border-left: 1px solid #777;	
-	box-shadow: inset 1px 1px 0 #999;
-}
-
-th:last-child {
-	box-shadow: inset -1px 1px 0 #999;
-}
-
-td {
-	border-right: 1px solid #fff;
-	border-left: 1px solid #e8e8e8;
-	border-top: 1px solid #fff;
-	border-bottom: 1px solid #e8e8e8;
-	padding: 10px 15px;
-	position: relative;
-	transition: all 300ms;
-}
-
-td:first-child {
-	box-shadow: inset 1px 0 0 #fff;
-}	
-
-td:last-child {
-	border-right: 1px solid #e8e8e8;
-	box-shadow: inset -1px 0 0 #fff;
-}	
-
-tr {
-	background: url(http://jackrugile.com/images/misc/noise-diagonal.png);	
-}
-
-tr:nth-child(odd) td {
-	background: #f1f1f1 url(http://jackrugile.com/images/misc/noise-diagonal.png);	
-}
-
-tr:last-of-type td {
-	box-shadow: inset 0 -1px 0 #fff; 
-	
-}
-
-tr:last-of-type td:first-child {
-	box-shadow: inset 1px -1px 0 #fff;
-}	
-
-tr:last-of-type td:last-child {
-	box-shadow: inset -1px -1px 0 #fff;
-}	
-
-tbody:hover td {
-	
-	text-shadow: 0 0 3px #aaa;
-}
-
-tbody:hover tr:hover td {
-	color: #444;
-	text-shadow: 0 1px 0 #fff;
-}
-*/
 
 
 
@@ -444,6 +354,13 @@ td.user-name {
 .sticky-wrap.overflow-y {
 	overflow-y: auto;
 	max-height: 50vh;
+}
+#tab_entete{
+    display: none;
+}
+.tab_haut{
+    text-align: center;
+   
 }
 /*****************************************************/
 
