--- a/css/style.css
+++ b/css/style.css
@@ -398,7 +398,9 @@ td.user-name {
 #export{
  display: none;   
 }
-
+#info{
+    display: none;
+}
 /*******************************************************/
 
 
